# User-Validator

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile.fedora  Dockerfile.ubuntu  README.MD  users.json
.github/workflows/: ci.yml
src/: main.cpp  user.hpp
src/app/: app_state.hpp  app_summary.cpp  app_summary.hpp  command_dispatcher.cpp  command_dispatcher.hpp  command_names.hpp  user_pipeline.cpp  user_pipeline.hpp
src/errors/: error_detail.hpp  invalid_user.hpp  rejected_record.hpp
src/exporter/: export_service.cpp  export_service.hpp  exporter_factory.cpp  exporter_factory.hpp  i_exporter.hpp  json_exporter.cpp  json_exporter.hpp  xml_exporter.cpp  xml_exporter.hpp
src/logging/: logEntry.hpp  logger.cpp  logger.hpp
src/mapper/: user_json_mapper.cpp  user_json_mapper.hpp
src/parser/: parser_common.cpp  parser_common.hpp  user_parser.cpp  user_parser.hpp  users.schema.json
src/utils/: file_utils.cpp  file_utils.hpp  utils.cpp  utils.hpp
src/validator/: base_validator.hpp  record_error.hpp  user_rules.cpp  user_rules.hpp  user_validator.cpp  user_validator.hpp  validation_error.hpp
tests/: test_commands.cpp  test_exporter.cpp  test_mapper.cpp  test_parser.cpp  test_utils.cpp  test_validator.cpp
